--- a/POOLUS/index.html
+++ b/POOLUS/index.html
@@ -32,7 +32,7 @@
                     <div class="text-center py-2 isamanroo-font btn-main-romanticisland-in">ROMANTIC ISLAND</div>
                     <div class="text-center py-2 isamanroo-font btn-main-romanticisland-out"></div>
                 </a>
-                <a href="#" class="btn-main d-flex justify-content-center align-items-center mb-4"> 
+                <a href="#gardenIsland" class="btn-main d-flex justify-content-center align-items-center mb-4"> 
                     <div class="text-center py-2 isamanroo-font btn-main-gardenisland-in">GARDEN ISLAND</div>
                     <div class="text-center py-2 isamanroo-font btn-main-gardenisland-out"></div>
                 </a>
@@ -122,6 +122,46 @@
                     구경하러가기
                 </p>
                 <img src="./img/romantic-arrow.png">
+            </div>
+        </div>
+
+        <!--GARDEN ISLAND-->
+        <div class="gardenisland-section" id="gardenIsland">
+            <div class="gardenisland-title text-center">
+                <p class="island-title text-center isamanroo-font">
+                    GARDEN ISLAND
+                </p>
+                <p class="poolus-title text-center anton-font">
+                    POOL:US
+                </p>
+
+                <img class="garden-cloud-1" src="./img/garden-cloud-1.png" alt="타이틀 꾸미는 구름">
+                <img class="garden-cloud-2" src="./img/garden-cloud-2.png" alt="타이틀 꾸미는 구름">
+                <img class="garden-cloud-3" src="./img/garden-cloud-3.png" alt="타이틀 꾸미는 구름">
+                <img class="garden-cloud-4" src="./img/garden-cloud-4.png" alt="타이틀 꾸미는 구름">
+            </div>
+
+            <div class="section-description text-center sbaggro-font">
+                숲속의 작은 쉼터, GARDEN ISLAND
+                <br>매일 걷던 그 길을 헤매이다, 우연히 도착한 숲.
+                <br>
+                <br>그곳엔 지친 당신을 위로해줄
+                <br>쉼터가 기다리고 있습니다.
+                <br>
+                <br>고된 하루의 끝을 위로하며,
+                <br>지친 그대를 보듬어줄 작은 쉼터.
+                <br>
+                <br>GARDEN ISLAND로 여러분을 초대합니다.
+            </div>
+
+            <div class="gardenislandBtn">
+                <a href="#">
+                    <Button>부스 보러가기</Button>
+                </a>
+            </div>
+
+            <div class="gardenisland-img">
+                <img src="./img/garden-island-bottom.png" alt="가든 아일랜드 하단 정원">
             </div>
         </div>
     </div>
