--- a/POOLUS/garden/garden.html
+++ b/POOLUS/garden/garden.html
@@ -7,11 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./garden.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+
   </head>
   <body>
-    <div class="display-container">
+    <div class="display-container sbaggro-font">
         <!--garden main-->
-        <section class="boothMain d-flex flex-column text-center sbaggro-font"> 
+        <section class="boothMain d-flex flex-column text-center"> 
             <div>
                 <p class="garden-title isamanroo-font">GARDEN ISLAND</p>
                 <p class="name anton-font">POOL:US</p>
@@ -32,8 +35,16 @@
                 </form>
             </div>
         </section>
+
+        <!--booth section-->
+        <section class="boothSection text-center">
+
+        </section>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  </body>
+    
+    <!--js연결-->
+    <script src="./garden.js"></script>
+</body>
 </html>
