--- a/POOLUS/index.html
+++ b/POOLUS/index.html
@@ -10,7 +10,35 @@
   <body>
     <div class="display-container">
         <!--main section -->
-        
+
+
+        <div class="navbar fixed-top d-flex justify-content-center">
+            <div class="logo">
+                <a href="./index.html">
+                    <img src="./img/logo/heartlogo.png" alt="pool:us logo">
+                </a>
+            </div>
+            <!-- hamburger -->
+            <input type="checkbox" id="navi-toggle" class="checkbox" />
+            <label for="navi-toggle" class="button">
+                <span class="icon">&nbsp;</span>
+            </label>
+            <div class="background">&nbsp;</div>
+
+            <!-- nav -->
+            <nav class="nav">
+                <ul class="list">
+                    <li class="item"> <a class="link sbaggro-font"> 공지사항 </a> </li>
+                    <li class="item"> <a class="link sbaggro-font"> 타임테이블 </a> </li>
+                    <li class="item"> <a class="link sbaggro-font"> 아티스트 라인업 </a> </li>
+                    <li class="item"> <a class="link sbaggro-font"> POOL:US MAP </a> </li>
+                    <li class="item"> <a class="link sbaggro-font"> 만든이들 </a> </li>
+                </ul>
+            </nav>
+        </div>
+
+
+
         <div class="main d-flex justify-content-center align-items-center">
             <video autoplay loop muted playsinline>
                 <source src="./viedo/background-video.mp4" type="video/mp4">
